# coveralls-api

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs
tests/: fill_in_example.rs
tests/example/: mysource.rs
