[package]
name = "coveralls-api"
version = "0.5.0"
authors = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "API Bindings for coveralls.io. Deals with report creation and submission."
repository = "https://github.com/xd009642/coveralls-api"
readme = "README.md"
license = "MIT/Apache-2.0"
categories = ["api-bindings", "web-programming::http-client"]
keywords = ["API", "coveralls"]
edition = "2018"

[dependencies]
serde = { version = "1.0.2", features = ["derive"]}
serde_json = "1.0.2"
serde_derive = "1.0.2"
md5 = "0.7.0"
curl = "0.4.6"

[dependencies.deflate]
version = "0.8.2"
features =["gzip"]
